[gd_scene load_steps=45 format=2]

[ext_resource path="res://Assets/PlayerSprites/run/k6.png" type="Texture" id=1]
[ext_resource path="res://HitBoxesAndHurtBoxes/HurtBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Audio/SoundEffects/knifeSlice.ogg" type="AudioStream" id=3]
[ext_resource path="res://Inventory/Inventory.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/PlayerSprites/attack/a1.png" type="Texture" id=5]
[ext_resource path="res://Assets/PlayerSprites/attack/a5.png" type="Texture" id=6]
[ext_resource path="res://Assets/PlayerSprites/move/t4.png" type="Texture" id=7]
[ext_resource path="res://Assets/PlayerSprites/move/t6.png" type="Texture" id=8]
[ext_resource path="res://Assets/PlayerSprites/attack/a3.png" type="Texture" id=9]
[ext_resource path="res://Assets/PlayerSprites/attack/a7.png" type="Texture" id=10]
[ext_resource path="res://Assets/PlayerSprites/attack/a8.png" type="Texture" id=11]
[ext_resource path="res://Assets/PlayerSprites/attack/a11.png" type="Texture" id=12]
[ext_resource path="res://Assets/PlayerSprites/idle/i1.png" type="Texture" id=13]
[ext_resource path="res://Assets/PlayerSprites/attack/a6.png" type="Texture" id=14]
[ext_resource path="res://Assets/PlayerSprites/attack/a13.png" type="Texture" id=15]
[ext_resource path="res://Assets/PlayerSprites/move/t10.png" type="Texture" id=16]
[ext_resource path="res://Assets/PlayerSprites/move/t1.png" type="Texture" id=17]
[ext_resource path="res://Assets/PlayerSprites/run/k2.png" type="Texture" id=18]
[ext_resource path="res://Assets/PlayerSprites/move/t5.png" type="Texture" id=19]
[ext_resource path="res://Assets/PlayerSprites/run/k3.png" type="Texture" id=20]
[ext_resource path="res://Assets/PlayerSprites/move/t3.png" type="Texture" id=21]
[ext_resource path="res://Assets/PlayerSprites/attack/a12.png" type="Texture" id=22]
[ext_resource path="res://Assets/PlayerSprites/idle/i2.png" type="Texture" id=23]
[ext_resource path="res://Assets/PlayerSprites/attack/a4.png" type="Texture" id=24]
[ext_resource path="res://Assets/PlayerSprites/attack/a9.png" type="Texture" id=25]
[ext_resource path="res://Assets/PlayerSprites/run/k4.png" type="Texture" id=26]
[ext_resource path="res://Assets/PlayerSprites/run/k5.png" type="Texture" id=27]
[ext_resource path="res://Assets/PlayerSprites/attack/a10.png" type="Texture" id=28]
[ext_resource path="res://Assets/PlayerSprites/attack/a2.png" type="Texture" id=29]
[ext_resource path="res://Assets/PlayerSprites/run/k1.png" type="Texture" id=30]
[ext_resource path="res://Assets/PlayerSprites/run/k8.png" type="Texture" id=31]
[ext_resource path="res://Assets/PlayerSprites/run/k7.png" type="Texture" id=32]
[ext_resource path="res://player/Player.gd" type="Script" id=33]
[ext_resource path="res://HitBoxesAndHurtBoxes/HitBox.tscn" type="PackedScene" id=34]
[ext_resource path="res://Assets/PlayerSprites/move/t7.png" type="Texture" id=35]
[ext_resource path="res://Assets/PlayerSprites/move/t8.png" type="Texture" id=36]
[ext_resource path="res://Assets/PlayerSprites/move/t9.png" type="Texture" id=37]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 43.6021, 65.5872 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.7742, 69.687 )

[sub_resource type="Animation" id=3]
resource_name = "AttackFull"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 29 ), ExtResource( 9 ), ExtResource( 24 ), ExtResource( 6 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 25 ), ExtResource( 28 ), ExtResource( 12 ), ExtResource( 22 ), ExtResource( 15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitboxPivot/HitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "Dash"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 17 ), ExtResource( 21 ), ExtResource( 7 ), ExtResource( 19 ), ExtResource( 8 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HurtBox:monitorable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 600, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HurtBox:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Camera2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"times": PoolRealArray( 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 20, 0 ), Vector2( 100, 0 ), Vector2( 200, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 13 ), ExtResource( 23 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Move"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ ExtResource( 30 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 1 ), ExtResource( 32 ), ExtResource( 31 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitboxPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 37.3313
height = 43.8848

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 33 )
game_over_screen = "res://Stages/Stage1.tscn"
Speed = 400

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.8147e-06 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 8 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 20, 0 )
current = true
limit_left = 0
limit_top = 0
limit_bottom = 800
smoothing_enabled = true

[node name="HitboxPivot" type="Position2D" parent="."]
position = Vector2( 0, -14.7163 )
rotation = 3.14159

[node name="HitBox" parent="HitboxPivot" instance=ExtResource( 34 )]
collision_mask = 32

[node name="CollisionShape2D" parent="HitboxPivot/HitBox" index="0"]
position = Vector2( 56.4926, -10.1879 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 3 )
anims/AttackFull = SubResource( 3 )
anims/Dash = SubResource( 7 )
anims/Idle = SubResource( 4 )
anims/Move = SubResource( 5 )

[node name="HurtBox" parent="." instance=ExtResource( 2 )]
monitoring = false
monitorable = false
collision_layer = 16
collision_mask = 64

[node name="CollisionShape2D" parent="HurtBox" index="0"]
modulate = Color( 0.984314, 0.00784314, 0.00784314, 1 )
shape = SubResource( 6 )

[node name="AttackSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Inventory" parent="." instance=ExtResource( 4 )]

[node name="InventoryContainer" parent="Inventory" index="0"]
visible = false

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="invincibility_ended" from="HurtBox" to="." method="_on_HurtBox_invincibility_ended"]
[connection signal="invincibility_started" from="HurtBox" to="." method="_on_HurtBox_invincibility_started"]

[editable path="HitboxPivot/HitBox"]
[editable path="HurtBox"]
[editable path="Inventory"]
